<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDBVden0W9OtTSNx95Ey084AoS82bpWYHI</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">none</string>
    <string name="app_name" translatable="false">Asdeporte</string>
    <string name="applicationId_File_Provider" translatable="false">es.as.deportesapp.fileprovider</string>
    <string name="retry">Reintentar</string>
    <string name="login">Log in</string>
    <string name="init_session">Iniciar sesión</string>
    <string name="your_account">Tu cuenta</string>
    <string name="password">Contraseña</string>
    <string name="facebook_login">Ingresa con Facebook</string>
    <string name="google_login">Ingresa con Google</string>
    <string name="no_account">¿No tienes una cuenta?</string>
    <string name="no_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_we_help">No te preocupes, podemos ayudarte.</string>
    <string name="forgot_recover_pass">Recuperar mi contraseña</string>
    <string name="forgot_email_send_title">¡Revisa tu correo!</string>
    <string name="forgot_email_send_desc">Te hemos enviado un correo con las instrucciones para recuperar tu contraseña. Si el correo que te enviamos no lo puedes ver, revisa tu spam.</string>
    <string name="glad_to_see_you">¡Nos alegra verte de nuevo!</string>
    <string name="finish">Finalizar</string>
    <string name="enter_email">Correo electrónico</string>
    <string name="enter_password">Contraseña</string>
    <string name="register_you">Regístrate</string>
    <string name="register_create">Crea tu cuenta</string>
    <string name="register_create_end_it">Finaliza tu registro</string>
    <string name="register_face_desc">Regístrate con Facebook o rellena los siguientes campos</string>
    <string name="register">Registro</string>
    <string name="personal_data">Datos personales</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="password_confirm">Confirma tu contraseña</string>
    <string name="register_you_ex">¡Regístrate!</string>
    <string name="accept_terms">Acepto los</string>
    <string name="accept_conditions">Términos y Condiciones</string>
    <string name="accept_politics">He leído y entendido la</string>
    <string name="politics">Política de privacidad</string>
    <string name="accept_politics_codere">He leído y acepto todos los documentos antes mencionados</string>
    <string name="accept_politics_codere_warning">Debes aceptar los términos y condiciones</string>
    <string name="have_account">¿Ya tienes una cuenta?</string>
    <string name="make_login"><u>Haz login</u></string>
    <string name="empty_field_error">Este campo es requerido</string>
    <string name="email_input_error">Introduce un email válido</string>
    <string name="password_input_error">Introduce un password válido</string>
    <string name="name_input_error">Introduce un nombre válido</string>
    <string name="surname_input_error">Introduce un apellido válido</string>
    <string name="phone_input_error">Introduce un teléfono válido</string>
    <string name="birthdate_input_empty">Introduce tu fecha de nacimiento</string>
    <string name="gender_input_empty">Introduce tu genero</string>
    <string name="match_password_input_error">Las contraseñas no coinciden</string>
    <string name="my_events">Mis eventos</string>
    <string name="my_results">Mis resultados</string>
    <string name="explore">Explorar</string>
    <string name="my_profile">Mi perfil</string>
    <string name="no_wait_participe">No esperes más, ¡Apúntate!</string>
    <string name="open_inscriptions">Inscripciones abiertas</string>
    <string name="comercial_asociations">Socios comerciales</string>
    <string name="with_help_of">Con el apoyo de</string>
    <string name="your_next_event">Tu próximo evento</string>
    <string name="days_left_to_event">Días que faltan al evento</string>
    <string name="next_events">Eventos futuros</string>
    <string name="prev_events">Eventos pasados</string>
    <string name="count_down_zero" translatable="false">00:00:00:00</string>
    <string name="event_started">Evento comenzado</string>
    <string name="event_share">Compartir evento</string>
    <string name="loading">Cargando...</string>
    <string name="news_description">Entérate de las ultimas noticias sobre el evento</string>
    <string name="elevation_m">Elevación (m)</string>
    <string name="exit_title">Salir de app</string>
    <string name="exit_subtitle">Estas a punto de salir del app</string>
    <string name="exit_action">Salir</string>
    <string name="days">days</string>
    <string name="hours_short">hrs</string>
    <string name="mins_short">min</string>
    <string name="secs_short">secs</string>
    <string name="follow">Seguir</string>
    <string name="participate">Participa</string>
    <string name="photos">Fotos</string>
    <string name="store">Tienda</string>
    <string name="blog">Blog</string>
    <string name="trainings">Entrenamientos</string>
    <string name="skip">Saltar</string>
    <string name="network_error">Parece que algo no funciona. Revisa tu conexión a internet.</string>
    <string name="common_error">Ha ocurrido un error. Inténtelo de nuevo</string>
    <string name="try_again">Volver a intentar</string>
    <string name="empty_data_error">Debes introducir todos los datos</string>
    <string name="username_text">Usuario</string>
    <string name="name_text">Nombre</string>
    <string name="name_address">Nombre de la dirección</string>
    <string name="first_surname">Apellido paterno</string>
    <string name="second_surname">Apellido materno</string>
    <string name="celular_phone">Teléfono celular</string>
    <string name="contact_email">Email de contacto</string>
    <string name="participant_email">Email del participante</string>
    <string name="phone">Teléfono</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="view_detail">Ver detalle</string>
    <string name="view_details">Ver detalles</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="complete">Completar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_confirm_payment">Confirmar pago</string>
    <string name="total_price">Precio total</string>
    <string name="total_insurance">Seguro:</string>
    <string name="total_shipping">Costo de envío:</string>
    <string name="btn_add">Añadir</string>
    <string name="view_all">Ver todos</string>
    <string name="view_more">Ver más</string>
    <string name="view_less">Ver menos</string>
    <string name="btn_ok">Ok</string>
    <string name="understood">Entendido</string>
    <string name="btn_apply">Aplicar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_save_changes">Guardar cambios</string>
    <string name="btn_affiliate">Afiliar</string>
    <string name="btn_affiliated">Afiliado</string>
    <string name="btn_affiliated_ready">Listo</string>
    <string name="btn_search">Buscar</string>
    <string name="btn_search_tribes">Buscar tribus</string>
    <string name="popup_generic_error_title">Ha ocurrido un error</string>
    <string name="race">Carrera</string>
    <string name="triathlon">Triatlón</string>
    <string name="cycling">Ciclismo</string>
    <string name="trikids">Trikids</string>
    <string name="swimming">Natación</string>
    <string name="takeoff">Quitar</string>
    <string name="netTime">Tiempo neto</string>
    <string name="months">Meses</string>
    <string name="version">Versión</string>
    <string name="text_to_clipboard">Se copió el texto seleccionado</string>
    <string name="default_word">Predeterminada</string>
    <string name="available_weekend">Disponible fin de semana</string>
    <string name="summary">Resumen</string>
    <string name="choose_city">Elige tu ciudad</string>
    <string name="choose_store">Elige tu tienda</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="color">Color</string>
    <string name="continue_word">Continuar</string>
    <string name="file_saved">Archivo guardado</string>
    <string name="file_not_saved">No se pudo guardar el archivo</string>
    <string name="preview">Previsualizar</string>
    <string name="rate_app_title">Calificar</string>
    <string name="rate_app_subtitle">Si te esta gustando AsDeporte, ¿te gustaría calificarnos? No te tomará más de un minuto.</string>
    <string name="rate_app_calif">Calificar</string>
    <string name="rate_app_later">Recuérdame más tarde</string>
    <string name="rate_app_no_thanks">No, gracias</string>
    <string name="hint_time">HH : MM : ss</string>
    <string name="onboarding_title_1">ENCUENTRA</string>
    <string name="onboarding_title_2">INSCRÍBETE</string>
    <string name="onboarding_title_3">TUS RESULTADOS</string>
    <string name="onboarding_title_4">PERFIL</string>
    <string name="onboarding_msg_1">Los mejores seriales y eventos deportivos de México en un solo lugar.</string>
    <string name="onboarding_msg_2">De forma rápida y segura podrás asegurar tu lugar en los mejores eventos. Dile adiós a los procesos tardados de inscripción y registro.</string>
    <string name="onboarding_msg_3">Tendrás acceso a tus resultados en tiempo real. Además, podrás ver tu historial de eventos y tiempos, hacer comparativas y mucho más.</string>
    <string name="onboarding_msg_4">Porque eres parte de la comunidad Asdeporte. Todos tus datos y preferencias para que las mejores experiencias deportivas estén a un clic de distancia.</string>
    <string name="onboarding_btn_next">Siguiente</string>
    <string name="onboarding_btn_start">Empezar</string>
    <string name="recovery_psw_title">Establecer contraseña</string>
    <string name="recovery_psw_msg">Introduce el mail con el que te has registrado y te enviaremos las instrucciones para establecer una nueva contraseña</string>
    <string name="recovery_psw_your_email">Tu email</string>
    <string name="recovery_psw_btn_send">Enviar</string>
    <string name="recovery_psw_error">El usuario no está registrado dentro de la plataforma de Asdeporte</string>
    <string name="events">Eventos</string>
    <string name="events_logout_msg">Para tener bajo control todos los detalles de tus próximos eventos, regístrate o haz login.</string>
    <string name="event_live_feed_meteo">Previsión meteorológica</string>
    <string name="event_live_feed_bulletin">Boletín de hoy</string>
    <string name="event_live_feed" translatable="false">Live feed</string>
    <string name="event_your_inscription">Tu inscripción</string>
    <string name="event_your_inscription_is_processed">Tu inscripción está procesada</string>
    <string name="event_sponsor">Patrocinadores</string>
    <string name="event_details">Detalles</string>
    <string name="event_route">Ruta carrera</string>
    <string name="event_transport">Transporte</string>
    <string name="event_last_news">Últimas noticias</string>
    <string name="event_see_results">Ver resultados</string>
    <string name="publish">Publicar</string>
    <string name="load_image">Cargar imagen</string>
    <string name="image_recomendation_one">Imagen: No pesar más de 5MB</string>
    <string name="image_recomendation_two">Vídeo: No pesar más de 10MB</string>
    <string name="write_comment">Escribe un comentario</string>
    <string name="txt_all">Todos</string>
    <string name="txt_friends">Amigos</string>
    <string name="txt_me">Solo yo</string>
    <string name="todo">TODO</string>
</resources>