<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.access.ForgotPasswordFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AsdToolbarTheme"/>

    <RelativeLayout
        android:id="@+id/forgotView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/forgetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_password"
            style="@style/Kanit_Semibold.Default.24"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/forgetSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_we_help"
            style="@style/Kanit_Regular.Default.16"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/forgetTitle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            app:hintTextColor="@color/black_dynamic"
            android:layout_below="@+id/forgetSubtitle"
            style="@style/LoginTextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/Kanit_Regular.Default.16"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            style="@style/Kanit_Medium.Default.16"
            android:textColor="@color/white"
            android:background="@drawable/pill_background"
            android:textAllCaps="false"
            android:text="@string/forgot_recover_pass"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/forgotSuccessView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/forget2Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_email_send_title"
            style="@style/Kanit_Semibold.Default.24"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            />

        <ImageView
            android:id="@+id/forgotPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/forgot_pic"
            android:layout_below="@+id/forget2Title"/>



        <TextView
            android:id="@+id/forget2Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_email_send_desc"
            style="@style/Kanit_Regular.Default.16"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_below="@+id/forgotPic"/>

    </RelativeLayout>

</RelativeLayout>