<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mitribu.post.NewPostMediaFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/AsdToolbarTheme"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@null">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:src="@drawable/ic_close_line" />

        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/toolbar"
        android:background="@color/gray_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <RelativeLayout
        android:id="@+id/media_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/post_upload_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5">

        <LinearLayout
            android:id="@+id/media_picker_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/post_upload_border_dashed"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_upload" />

            <TextView
                style="@style/Kanit_Semi_Bold.Default.16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_image"
                android:textAlignment="center" />

            <TextView
                style="@style/Kanit_Regular.Default.14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_recomendation_one"
                android:textAlignment="center" />

            <TextView
                style="@style/Kanit_Regular.Default.14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_recomendation_two"
                android:textAlignment="center" />
        </LinearLayout>

        <ImageView
            android:id="@+id/media_container_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchTextField"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/write_comment"
        app:endIconMode="custom"
        app:endIconTint="@color/black_dynamic"
        app:hintTextColor="@color/black_dynamic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/media_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchTextInput"
            style="@style/Kanit_Regular.Default.16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine|textCapSentences"
            android:textAlignment="textStart" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="@+id/searchTextField"
        app:layout_constraintStart_toStartOf="@+id/searchTextField"
        app:layout_constraintTop_toBottomOf="@+id/searchTextField">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Kanit_Regular.Default.16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:textColor="@color/gray_secondary_text"
            app:backgroundTint="@color/black_dynamic"
            android:layout_weight="1"
            android:background="@drawable/secondary_button"
            android:paddingVertical="@dimen/dimen_10dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_button"
            style="@style/Kanit_Regular.Default.16"
            android:layout_width="0dp"
            android:paddingVertical="@dimen/dimen_12dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_weight="1"
            android:text="@string/publish"
            android:backgroundTint="@color/border_gray"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gray_secondary_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>